--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
     "mysql": "^2.18.1",
+    "pinia": "^2.2.4",
     "vue": "^3.5.10",
     "vue-router": "^4.4.5"
   },
