--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-vue": "^7.2.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "ckeditor5": "^43.3.1",
     "dotenv": "^16.4.5",
     "mysql": "^2.18.1",
     "pinia": "^2.2.4",
