--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap-icons": "^1.11.3",
     "ckeditor5": "^43.3.1",
     "dotenv": "^16.4.5",
+    "jwt-decode": "^4.0.0",
     "mysql": "^2.18.1",
     "pinia": "^2.2.4",
     "vue": "^3.5.10",
