--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ckeditor5": "^43.3.1",
     "dotenv": "^16.4.5",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "mysql": "^2.18.1",
     "pinia": "^2.2.4",
     "vue": "^3.5.10",
